--- a/views/Listing/show.ejs
+++ b/views/Listing/show.ejs
@@ -29,7 +29,7 @@
 
 <div class="row offset-3">
     <div class="col-md-1">
-    <a href="/listing/<%= listing._id %>/edit">
+    <a href="/<%= listing._id %>/edit">
         
         <button class="btn btn-dark">EDIT</button>
     
@@ -38,7 +38,7 @@
     <br><br>
     
     <div class="col-md-3">
-    <form method="post" action="/listing/<%= listing._id %>?_method=DELETE">
+    <form method="post" action="/<%= listing._id %>?_method=DELETE">
         
         <button class="btn btn-dark add-btn">DELETE</button>
 
