--- a/views/new.ejs
+++ b/views/new.ejs
@@ -4,7 +4,7 @@
         <div class="col-8 offset-2" > <!--offset use for the margin of left side, and col-8 is for screen divide into  8 colums-->
     <h3>Insert Info</h3>
     <br><br>
-    <form action="/listing/new" method="POST" novalidate class="needs-validation " enctype="multipart/form-data">
+    <form action="/new" method="POST" novalidate class="needs-validation " enctype="multipart/form-data">
        
             <div>
             <label for="title" class="form-label">Title</label>
